<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <modules>
        <module>long-polling</module>
        <module>servlet</module>
        <module>nacos-spring-boot-example</module>
        <module>spring-webmvc</module>
        <module>spring-jdbc</module>
        <module>configuration-properties</module>
        <module>sharding-jdbc-mybatis</module>
        <module>grpc-example</module>
        <module>apollo-example</module>
        <module>spring-xml</module>
        <module>spring-annotation</module>
        <module>spring-security</module>
        <module>spring-session-jedis</module>
        <module>rsocket-example</module>
        <module>rsocket-rpc-example</module>
        <module>spring-webflux</module>
        <module>sentinel-example</module>
        <module>netty-example</module>
        <module>validation-example</module>
        <module>spring-boot</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.3</version>
        <!-- lookup parent from repository -->
        <relativePath/>
    </parent>
    <groupId>com.test</groupId>
    <artifactId>spring-test</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>spring-test</name>
    <description>spring and spring-boot</description>

    <packaging>pom</packaging>
    <properties>
        <java.version>21</java.version>
        <guava.version>32.1.2-jre</guava.version>
        <fastjson.version>1.2.83</fastjson.version>
        <h2.version>2.2.222</h2.version>
        <easyexcel.version>3.3.2</easyexcel.version>
        <commons-compress.version>1.23.0</commons-compress.version>
        <commons-collections4.version>4.4</commons-collections4.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <!-- 全局排除logging -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>
    </dependencies>
</project>
